# test-idioms

./: Cargo.toml  README.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: my_fuzz_target.rs
shared_correctness_logic/: Cargo.toml
shared_correctness_logic/src/: lib.rs
src/: lib.rs
tests/: proptest.rs
