[package]
name = "my-crate-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.my-crate]
path = ".."

[dependencies.shared_correctness_logic]
path = "../shared_correctness_logic"

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "my_fuzz_target"
path = "fuzz_targets/my_fuzz_target.rs"
test = false
doc = false
